# toard

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.benchmark.yml  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vercel.json
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ARCHITECTURE.md  DEPLOY.md  ai-utilization-methodology.md  ai-utilization-policy.md  clickhouse-exact-rollup-runbook.md  content-encryption-runbook.md  design-host-breakdown.md  design-usage-pull.md  e2ee-prompt-history-runbook.md  tool-metadata-collection.md
fixtures/: e2ee-v1-golden.json  sample-codex-otlp.json  sample-otlp-logs.json  tool-activity.golden.json  tool-inventory.golden.json  (+1 more)
shim/rust/: Cargo.toml
shim/rust/src/: bg.rs  claude_env.rs  cli.rs  codex.rs  content_crypto.rs  content_keys.rs  credentials.rs  cursor_hook.rs  daemon.rs  delivery.rs  device_control.rs  e2ee_setup.rs  e2ee_setup_page.html  fsx.rs  host.rs  iso.rs  json.rs  local_bridge.rs  main.rs  otel.rs  recovery.rs  resolve.rs  targets.rs  tool_event.rs  update.rs  usage_event.rs
shim/rust/src/collect/: claude.rs  codex.rs  cursor.rs  cursor_usage.rs  fanout.rs  gemini.rs  gemini_family.rs  inventory.rs  mod.rs  post.rs  qwen.rs
shim/rust/src/tool_deployment/: adapters.rs  client.rs  launcher.rs  mod.rs  plan.rs  protocol.rs  reconcile.rs  secrets.rs  source.rs  state.rs  tests.rs
shim/rust/tests/: doctor_cli.rs  multi_target_cli.rs
(+816 files in other folders)
